Added needed defs for theorems.

--- a/project.tex
+++ b/project.tex
@@ -11,6 +11,11 @@
 \usepackage{xspace}
 \usepackage{color}
 
+\newtheorem{theorem}{Theorem}
+\newtheorem{lemma}{Lemma}
+\newtheorem{case}{Case}[theorem]
+\newtheorem{subcase}{Case}[case]
+
 \begin{document}
 
 \title{Interoperation for Lazy and Eager Evaluation}
