Moved the typing lemmas and theorems into a separate type soundness section.

--- a/project.tex
+++ b/project.tex
@@ -31,6 +31,7 @@ Programmers forgo existing solutions to problems in other programming languages 
 \input{section1.tex}
 \input{section2.tex}
 \input{section3.tex}
+\input{section4.tex}
 
 \clearpage
 
