--- a/section2.tex
+++ b/section2.tex
@@ -4,39 +4,21 @@ The model of computation extends the model presented by Kinghorn \cite{kinghorn0
 
 Since values are irreducible at all points, and since the expressions in Haskell boundaries are irreducible at some points and not others, Haskell boundaries are a new kind of value called an \emph{unforced value}. Like thunks, unforced values can be forced to evaluate to values. The Haskell expressions in Haskell boundaries are forced to evaluate to Haskell values, then the Haskell values are converted to ML or Scheme values. ML and Scheme values are called \emph{forced values} because any might be the result of forcing an unforced value. Forced values are a proper subset of unforced values because unforced values can only be at points where forced values can also be, but forced values can be at points where unforced values cannot. ML and Scheme reduction rules and evaluation contexts use unforced values at the incompatible strictness points to match against Haskell boundaries, and their evaluation contexts prevent evaluation within Haskell boundaries at those points.
 
-\begin{theorem}{Haskell Progress}
-If \judeh{}{\first{\varexph}}{\vartyh} then \pshyp{\first{\varexph}}{\second{\varexph}}.
-\end{theorem}
-
-\begin{theorem}{ML Progress}
-If \judem{}{\first{\varexpm}}{\vartym} then \pshyp{\first{\varexpm}}{\second{\varexpm}}.
-\end{theorem}
-
-\begin{theorem}{Scheme Progress}
-If \judes{}{\first{\varexps}}{\tytst} then \pshyp{\first{\varexps}}{\second{\varexps}}.
-\end{theorem}
-
-\begin{theorem}{Haskell Preservation}
-If \judeh{\env}{\first{\varexph}}{\first{\vartyh}} and \redruleh{\first{\varexph}}{\second{\varexph}} then \judeh{\env}{\second{\varexph}}{\first{\vartyh}}.
-\end{theorem}
-
-\begin{theorem}{ML Preservation}
-If \judem{\env}{\first{\varexpm}}{\first{\vartym}} and \first{\varexpm} \red \second{\varexpm} then \judem{\env}{\second{\varexpm}}{\first{\vartym}}.
-\end{theorem}
-
-\begin{theorem}{Scheme Preservation}
-If \judes{\env}{\first{\varexps}}{\tytst} and \first{\varexps} \red \second{\varexps} then \judes{\env}{\second{\varexps}}{\tytst}.
-\end{theorem}
-
 Figure \ref{figunf} illustrates forced and unforced values at work for the cases explained in the introduction. The reductions for lines 1-4 show that the outer Haskell argument $zeroes$ is not forced by the application of the inner Scheme function. The reductions for lines 4-8 show that the conversion of $zeroes$ from Haskell to Scheme did not diverge, despite $zeroes$ being a list of infinite size.
 
 \input{figures/unforced.tex}
 
 The interoperation of Haskell and ML posed another problem: the conversion of type abstractions. The application of a converted type abstraction cannot substitute the type argument into the inner language directly, since the inner language has no notion of the types of the outer language. Instead, conversion substitutes lumps in a boundary's inner type. The application of a converted type abstraction substitutes the type argument in the boundary's outer type. Since the natural embedding \cite{matthews07} requires the boundary's outer and inner types to be equal, a new equality relation called lump equality is used here that allows lumps within the boundary's inner type to match any corresponding type in the boundary's outer type.
 
-The proof of correctness of this model would be similar to that of Kinghorn \cite{kinghorn07}, mutatis mutandis.
+Legends of symbol and syntax names are presented in figures \ref{figsymbols}, \ref{figsyntax1}, and \ref{figsyntax2}; Haskell is presented in figures \ref{fighs}, \ref{fightr}, \ref{fighos}, \ref{fighmos}, and \ref{fighsos}; ML is presented in figures \ref{figms}, \ref{figmtr}, \ref{figmos}, \ref{figmhos}, and \ref{figmsos}; Scheme is presented in figures \ref{figss}, \ref{figstr}, \ref{figsos}, \ref{figshos}, and \ref{figsmos}; the unbrand function is presented in figure \ref{figunbrand}; and the lump equality relation is presented in figure \ref{figequality}.
 
-Haskell is presented in figures \ref{fighs}, \ref{fightr}, \ref{fighos}, \ref{fighmos}, and \ref{fighsos}; ML is presented in figures \ref{figms}, \ref{figmtr}, \ref{figmos}, \ref{figmhos}, and \ref{figmsos}; Scheme is presented in figures \ref{figss}, \ref{figstr}, \ref{figsos}, \ref{figshos}, and \ref{figsmos}; the unbrand function is presented in figure \ref{figunbrand}; the lump equality relation is presented in figure \ref{figequality}; and legends of symbol and syntax names are presented in figures \ref{figsymbols}, \ref{figsyntax1}, and \ref{figsyntax2}.
+\clearpage
+
+\input{model/symbols.tex}
+
+\clearpage
+
+\input{model/syntax.tex}
 
 \clearpage
 
@@ -105,13 +87,5 @@ Haskell is presented in figures \ref{fighs}, \ref{fightr}, \ref{fighos}, \ref{fi
 \clearpage
 
 \input{model/equality.tex}
-
-\clearpage
-
-\input{model/symbols.tex}
-
-\clearpage
-
-\input{model/syntax.tex}
 
 \clearpage
