--- a/section3.tex
+++ b/section3.tex
@@ -16,7 +16,7 @@ Immediate from the typing rules.
 \label{lemuni}
 If \varexph, \varexpm, and \varexps are well-typed then they have only one type.
 \begin{proof}
-By structural induction on \varexph, \varexpm, and \varexps and the \proinv.
+By structural induction on \varexph, \varexpm, and \varexps and lemma \ref{leminv}.
 \end{proof}
 \end{lemma}
 
