Fleshed out the eval strat theorem.

--- a/section2.tex
+++ b/section2.tex
@@ -11,9 +11,11 @@ Figure \ref{figunf} illustrates forced and unforced values at work for the cases
 \begin{theorem}{Evaluation Strategy Preservation}
 
 \label{thmstr}
-asdf
+$\varexph = \expmh{\vartym}{\vartyh}{\varexph} = \expsh{\vartyh}{\varexph}$.
+$\varexpm = \exphm{\vartyh}{\vartym}{\varexpm} = \expsm{\vartym}{\varexpm}$.
+$\varexps = \exphs{\vartyh}{\varexps} = \expms{\vartym}{\varexps}$.
 \begin{proof}
-asdf
+By structural induction.
 \end{proof}
 \end{theorem}
 
