Saving progress before Christmas trip home.

--- a/project.tex
+++ b/project.tex
@@ -10,6 +10,7 @@
 \usepackage{array}
 \usepackage{xspace}
 \usepackage{color}
+\usepackage{epic}
 
 \newtheorem{theorem}{Theorem}
 \newtheorem{lemma}{Lemma}
