--- a/section1.tex
+++ b/section1.tex
@@ -2,47 +2,63 @@
 
 Programmers forgo existing solutions to problems in other programming languages where software interoperation proves too cumbersome; they remake solutions, rather than reuse them. To facilitate reuse, interoperation must resolve incompatible language features transparently at the boundaries between languages. To address part of this problem, this paper presents a model of computation that resolves lazy and eager evaluation strategies.
 
-Languages are normally independent, as in figure \ref{figsim}. Matthews and Findler \cite{matthews07} approached interoperation by tying languages together with boundary expressions, as in figure \ref{figtie}. In this example, $\mathtt{ab} \; b$ and $\mathtt{ba} \; a$ are the boundary expressions. Expressions of one language are embedded in boundaries of another language. The following are well-formed expressions: $\lambda x.x$, $\lambda x.\mathtt{ab} \; (\lambda y.y)$, $\lambda x.\mathtt{ab} \; (\lambda y.\mathtt{ba} \; (\lambda x.x))$. Embedding represents the exchange of the expression from the inner language to the outer language. Application can substitute ``across" or ``within" or ``through" boundaries; $x$ is bound in $\lambda x.\mathtt{ab} \; (\mathtt{ba} \; x)$.
+Languages are normally independent, as in figure \ref{figsim}. Matthews and Findler \cite{matthews07} approached interoperation by tying languages together with boundary expressions, as in figure \ref{figtie}, where $\mathtt{ab} \; b$ and $\mathtt{ba} \; a$ are the boundary expressions. Expressions of one language are embedded in boundaries of another language. Embedding an expression represents the exchange of the expression from the inner language to the outer language.
 
-Matthews and Findler resolved static and dynamic type systems for interoperation by adding a type annotation to boundaries. If the inner language is statically-typed, then the type annotation reflects the actual type of the embedded expression according to the inner language; otherwise, the outer langauge is statically-typed, and the type annotation reflects the expected type of the embedded expression according to the outer language. In the languages presented in figure \ref{figann}, the following expressions are well-formed and well-typed: $\lambda x:\iota.x$, $\mathtt{ba} \; (\iota \rightarrow \iota) \; (\lambda x:\iota.x)$, $\mathtt{ab} \; (\iota \rightarrow \iota) \; (\mathtt{ba} \; (\iota \rightarrow \iota) \; (\lambda x:\iota.x))$.
-
-Matthews and Findler presented two approaches for embedding. The lump embedding adds a new type, the lump type, to the static type system. Any boundary of a statically-typed language annotated with the lump type is an opaque value that cannot be inspected by the statically-typed language; it can only be returned to the dynamically-typed language. When a boundary is embedded within another boundary, and both have equal type annotations, the boundaries collapse, leaving only the embedded expression of the embedded boundary. Hence, if $\mathtt{lump}$ is a type, then $\mathtt{ab} \; (\iota \rightarrow \iota) \; (\mathtt{ba} \; (\iota \rightarrow \iota) \; (\lambda x:\iota.x))$ becomes $\lambda x:\iota.x$, and $\mathtt{ba} \; \mathtt{lump} \; (\mathtt{ab} \; \mathtt{lump} \; (\lambda y.y))$ becomes $\lambda y.y$.
-
-The natural embedding 
-
-\begin{figure}[t]
+\begin{figure}[htb]
 \onehalfspacing
 \centering
 \begin{tabular}{c}
-$a \; \rightarrow \; x \; | \; \lambda x.a \; | \; a \; a$ \\
-$b \; \rightarrow \; y \; | \; \lambda y.b \; | \; b \; b$
+$a \; = \; x \; | \; \lambda x.a \; | \; a \; a$ \\
+$b \; = \; y \; | \; \lambda y.b \; | \; b \; b$
 \end{tabular}
 \caption{Two simple languages.}
 \label{figsim}
 \end{figure}
 
-\begin{figure}[t]
+\begin{figure}[htb]
 \onehalfspacing
 \centering
 \begin{tabular}{c}
-$a \; \rightarrow \; x \; | \; \lambda x.a \; | \; a \; a \; | \; \mathtt{ab} \; b$ \\
-$b \; \rightarrow \; y \; | \; \lambda y.b \; | \; b \; b \; | \; \mathtt{ba} \; a$
+$a \; = \; x \; | \; \lambda x.a \; | \; a \; a \; | \; \mathtt{ab} \; b$ \\
+$b \; = \; y \; | \; \lambda y.b \; | \; b \; b \; | \; \mathtt{ba} \; a$
 \end{tabular}
 \caption{Two simple languages tied together with boundaries.}
 \label{figtie}
 \end{figure}
 
-\begin{figure}[b]
+Matthews and Findler used evaluation contexts to enable error states in their languages whereby on an error the entire program at that moment is discarded and replaced with an error. With evaluation contexts, every reduction rule is a whole-program transformation with a focus on the reducible expression and a reference to the enclosing evaluation context (the expression outside the reducible expression). Reduction rules can either replace the focused reducible expression within the context of the containing program, or discard the evaluation context and reduce to something else like an error.
+
+\begin{figure}[htb]
 \onehalfspacing
 \centering
 \begin{tabular}{c}
-$t \; \rightarrow \; \iota \; | \; t \; \rightarrow \; t$ \\
-$a \; \rightarrow \; x \; | \; \lambda x:t.a \; | \; a \; a \; | \; \mathtt{ab} \; t \; b$ \\
-$b \; \rightarrow \; y \; | \; \lambda y.b \; | \; b \; b \; | \; \mathtt{ba} \; t \; a$
+$t \; = \; x \; | \; v \; | \; t \; t \; | \; \mathtt{error}$ \\
+$v \; = \; \lambda x.t$ \\
+$(\lambda x.t) \; v \; \rightarrow t[v/x]$ \\
+$\mathtt{error} \; t \; \rightarrow \; \textbf{Error}$ \\
+$v \; \mathtt{error} \; \rightarrow \; \textbf{Error}$ \\
+$t \; \rightarrow \; t' \; \Rightarrow \; t \; t'' \; \rightarrow \; t' \; t''$ \\
+$t \; \rightarrow \; t' \; \Rightarrow \; v \; t \; \rightarrow \; v \; t'$ \\
 \end{tabular}
-\caption{Static typing requires boundary type annotations.}
-\label{figann}
+\caption{Error state by inference rules.}
+\label{figinf}
 \end{figure}
+
+\begin{figure}[htb]
+\onehalfspacing
+\centering
+\begin{tabular}{c}
+$t \; = \; x \; | \; v \; | \; t \; t \; | \; \mathtt{error}$ \\
+$v \; = \; \lambda x.t$ \\
+$E \; = \; [\,] \; | \; E \; t \; | \; v \; E$ \\
+$E[(\lambda x.t) \; v] \; \rightarrow E[t[v/x]]$ \\
+$E[\mathtt{error}] \; \rightarrow \; \textbf{Error}$ \\
+\end{tabular}
+\caption{Error state by evaluation contexts.}
+\label{figcon}
+\end{figure}
+
+
 
 The model of computation extends the work of Matthews and Findler \cite{matthews07} and uses the work of Kinghorn \cite{kinghorn07} as a starting point. Matthews and Findler presented \cite{matthews07} two approaches to resolving static and dynamic type systems for interoperation. In the first approach, called lump embedding, languages are tied together by new expressions called boundaries that embed expressions of one language within another, which represent the exchange of the embedded expressions from the inner languages to the outer languages. The embedded expressions, when exchanged, are opaque values that cannot be inspected by the outer language, and can only be returned to the inner language. In the second approach, called natural embedding, languages are tied together as with lump embedding, but instead of opaqueness, embedded expressions are reduced to values, then converted into equal values of the outer language following type annotations in the boundaries. To return a converted value back to the inner language, it must be converted back.
 
